fix overflow

--- a/src/SCSS-Modules/MoonMillions/_moon2.scss
+++ b/src/SCSS-Modules/MoonMillions/_moon2.scss
@@ -85,7 +85,7 @@
       position: relative;
       padding: 25px;
       border-radius: 30px;
-      overflow: hidden;
+      // overflow: hidden;
       background: -webkit-linear-gradient(
         top,
         rgb(118, 69, 217) 0%,
@@ -165,12 +165,11 @@
           }
           img:last-child {
             position: absolute;
-            visibility: hidden;
             height: auto;
             width: 100%;
             bottom: 0;
             right: 0;
-            z-index: 0;
+            visibility: hidden;
           }
         }
 
@@ -340,12 +339,12 @@
             }
             img:last-child {
               visibility: visible;
+              width: 40%;
               // padding-top: 50px;
               // padding-right: 30px;
               // right: 0;
-              margin-top: 100px;
-              bottom: -50px;
-              width: 40%;
+              // margin-top: 100px;
+              // bottom: -50px;
             }
           }
           .moon_lottery2 {
